Fix outliner z-index behavior Add shadows to detached panels Fix positioning

--- a/src/components/SidePanels/PanelBase.styl
+++ b/src/components/SidePanels/PanelBase.styl
@@ -20,7 +20,8 @@
     top 0
     left 0
     position absolute
-    border 1px solid rgba(#000, 0.1)
+    border 1px solid rgba(137, 128, 152, 0.16)
+    box-shadow: 0px 6px 10px 4px rgba(38, 38, 38, 0.15), 0px 2px 3px rgba(38, 38, 38, 0.3);
 
   &_hidden:not(&_detached)
     top 0
@@ -90,6 +91,9 @@
 
     ~/_hidden &
       background-color transparent
+
+    &:not(&_enabled)
+      pointer-events none
 
   &__content
     width 100%
